Update POM and Deprecated Class

--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -72,7 +72,6 @@
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -83,6 +82,7 @@
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.30</version>
 						</path>
 					</annotationProcessorPaths>
 				</configuration>
@@ -101,5 +101,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
 </project>
