--- a/payment-service/src/main/resources/application.yml
+++ b/payment-service/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 server:
   port: 8081
+  servlet:
+    context-path: /payment-service
 
 spring:
   application:
@@ -19,11 +21,14 @@ spring:
   h2:
     console:
       enabled: true
+      path: /h2-console
+      settings:
+        web-allow-others: true
 
 order:
   service:
-    url: http://localhost:8082
+    url: http://localhost:8082/order-service
 
 notification:
   service:
-    url: http://localhost:8083
+    url: http://localhost:8083/notification-service
